# NumGame

./: .flake  .flake8  .gitignore  README.md  docker-compose.yml
.github/workflows/: python-package.yml
backend/: .flake  Dockerfile  README.md  backend.env.test  entrypoint.sh  pyproject.toml  test_numgame.py
backend/alembic/: env.py
backend/alembic/versions/: 3fa7023773a6_init.py  532ee9997db1_change_the_nullability_of_the_db.py  71e6b2d93d89_add_first_and_second_move_sscore_in_.py
backend/data_management/: data_classes.py  data_management.py  data_models.py  enums.py  redis_manager.py  request_body.py
backend/game_processes/: bot_controller.py  bot_game_process.py  game_fsm.py  pvp.py  redis_manager.py
backend/numgame/: bot_controller.py  config.py  data_management.py  data_models.py  enums.py  game_process.py  logger_config.py  redis_manager.py  request_body.py  server.py  server_game.py  server_user_management.py  server_utils.py  token_management.py  utils.py
backend/routers/: router_game.py  router_user_management.py  router_utils.py
backend/utils/: config.py  logger_config.py  token_management.py  utils.py
frontend/numgame-frontend/: .dockerignore  .env.production  .gitignore  AGENTS.md  DOCUMENT.md  Dockerfile.dev  Dockerfile.prod  README.md  babel.config.js  build-prod.bat  build-prod.sh  package-lock.json  package.json  vue.config.js
frontend/numgame-frontend/public/: index.html
frontend/numgame-frontend/src/: App.vue  main.js
frontend/numgame-frontend/src/components/: AppButton.vue  AppInput.vue  BotGame.vue  ErrorNotification.vue  GameInfo.vue  GameResult.vue  GameRulesModal.vue  GameScreen.vue  HelloWorld.vue  InfoNotification.vue  StartBotGame.vue  StartScreen.vue  SuccessNotification.vue  UserInfo.vue
frontend/numgame-frontend/src/router/: index.js
frontend/numgame-frontend/src/stores/: userStore.js
frontend/numgame-frontend/src/utils/: api.js  (+7 more)
(+19 files in other folders)
